--- a/cmake-mpi-example/CMakeLists.txt
+++ b/cmake-mpi-example/CMakeLists.txt
@@ -5,11 +5,9 @@ enable_language(Fortran)
 # cmake の名の通り、デフォルトでは C/C++ しか扱わないので、
 # Fortran向けの設定を生成するように指定します。
 
-project(external-library Fortran)
+project(simple-dependency Fortran)
 
-find_package(MPI REQUIRED)
-
-set(EXECUTABLE mpi-abcd)
+set(EXECUTABLE abcd)
 # CMakeの変数宣言です。実行体の名前を後から変更しやすいよう
 # 最初から変数で定義したほうがいいと思います。
 
@@ -22,8 +20,3 @@ add_executable(${EXECUTABLE} # "abcd" のことです
   )
 # 実行体ファイルをビルドするための設定です。
 # コンパイルに必要なソースを列挙するだけでOKです。
-
-target_link_libraries(${EXECUTABLE}
-    PRIVATE
-    MPI::MPI_Fortran
-    )
